--- a/source/VizGurka/Pages/Search/Search.cshtml
+++ b/source/VizGurka/Pages/Search/Search.cshtml
@@ -29,12 +29,14 @@
         {
             <h1 class="search_title">Search Results for: "@Model.Query"</h1>
             <a href="#features" class="search_category">Features <span class="count">@Model.FeatureResultCount</span></a>
+            <a href="#scenarios" class="search_category">Scenarios <span class="count">@Model.ScenarioResultCount</span></a>
+        }
         }
 
     </section>
     <section class="search_display">
-        @if (Model.FeatureSearchResults.Any())
-        {
+@if (Model.FeatureSearchResults.Any())
+{
             <div class="dropdown">
                 <div class="dropdown-header arrow-trigger">
                     <h1 id="features" class="search_category">Features <span class="count">@Model.FeatureResultCount</span>
@@ -64,23 +66,32 @@
                 </div>
                 <div class="dropdown-content">
                     <ul>
-                        @foreach (var scenario in Model.ScenarioSearchResults)
-                        {
+    @foreach (var scenarioWithFeature in Model.ScenarioSearchResults)
+    {
                             <li>
-                                <a asp-page="/features/features" asp-route-productName="@Model.ProductName"
-                                    asp-route-id="@Model.Feature.Id">
-                                    @scenario.Name
-                                </a>
-                                <h2>@scenario.Description</h2>
-                            </li>
-                        }
+        @{
+            var decodedRuleName = System.Net.WebUtility.UrlDecode(scenarioWithFeature.Scenario!.Name);
+        }
+
+                                <a class="scenario_title" href="@Html.Raw($"/features/{Model.ProductName}/{scenarioWithFeature.FeatureId}/{scenarioWithFeature.FeatureId}/#{decodedRuleName}-scenario")">
+                                            @scenarioWithFeature.Scenario!.Name
+                                        </a>
+                                        @foreach (var step in scenarioWithFeature.Steps)
+                                        {
+                                                <div class=" steps">
+                                        <img src="~/icons/@(IconHelper.GetStatusIcon(step.Status)).svg" alt="status icon" />
+                                        <strong>@step.Kind</strong> @step.Text
+                        </div>
+                    }
+                    </li>
+                    }
                     </ul>
                 </div>
-            </div>
-        }
-        else
-        {
-            <p>No results found for "@Model.Query".</p>
-        }
-    </section>
-</section>
+                </div>
+                }
+                else
+                {
+                <p>No results found for "@Model.Query".</p>
+                }
+            </section>
+        </section>
