--- a/source/VizGurka/wwwroot/css/search.css
+++ b/source/VizGurka/wwwroot/css/search.css
@@ -119,7 +119,7 @@
 .dropdown-content ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding-left: 0;
   gap: 5px;
 }
