--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -12,11 +12,11 @@
   <div class="landing_container_box">
     <div class="title_box">
       <img type="image/png" src="~/biggurka.png" alt="VizGurka logo" class="title_box_img" />
-      <h1 class="title_box_title">@Localizer["Välkommen till Vizgurka!"]</h1>
+      <h1 class="title_box_title">@Localizer["Welcome to Vizgurka!"]</h1>
     </div>
     <div class="test_choice_box">
       <h2 class="test_choice_box_title">
-        @Localizer["Vänligen välj en produkt att inspektera"]
+        @Localizer["Please choose which product to review"]
       </h2>
       <div class="test_choice_box_link_container">
         @foreach (var item in Model.UniqueProductNamesWithDatesAndId)
