--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -1,101 +1,24 @@
-@{
-  Layout = "~/Pages/Shared/_Layout.cshtml";
+@model VizGurka.Pages.Features.FeaturesModel
+@using Microsoft.Extensions.Localization
+@inject Microsoft.AspNetCore.Mvc.Rendering.IHtmlHelper Html
 
-  var testRun = TestrunReader.ReadLatestRun("One");
-  var product = testRun.Products.FirstOrDefault();
-  var testRunDateTime = DateTime.Parse(testRun.DateAndTime);
-  ViewData["Title"] = testRun.Name;
-}
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="wrapper">
-  <aside class="sidebar" id="sidebar">
-    <div class="filter-container">
-      <h2>@testRun.Name</h2>
-      <span>Generated @testRunDateTime.ToString("dd MMMM yyyy HH:mm")</span>
-      <div class="filter-wrapper">
-        <search>
-          <label for="feature-search">Search:</label>
-          <input type="search" id="feature-search" />
-        </search>
-        <div class="select-container">
-          <label for="filter-select">Filter:</label>
-          <select name="filter" id="filter-select">
-            <option value="">--No Filter--</option>
-            <option value="passed">Passed</option>
-            <option value="failed">Failed</option>
-            <option value="pending">Pending</option>
-          </select>
-        </div>
-      </div>
-      <hr />
-    </div>
-    <ul class="feature-list">
-      @foreach (var feature in product.Features)
-      {
-        <li class="@(IconHelper.GetStatusIcon(feature.Status))">
-          <div class="feature-item">
-            <span role="button" class="feature-dropdown"><i class="arrow right"></i></span>
-            <a href="@Url.Page("/Features/Index", new { id = feature.Id })">
-              <img src="~/icons/@(IconHelper.GetStatusIcon(feature.Status)).svg"
-                alt="icon to represent the test result" />
-              <h5 class="feature-name">@feature.Name</h5>
-            </a>
-          </div>
-          <div class="feature-dropdown-content">
-            @if (feature.Scenarios.Any())
-            {
-              <ul>
-                @foreach (var scenario in feature.Scenarios)
-                {
-                  <li>
-                    <a href="@Url.Page("/Features/Index", new { id = feature.Id })#@scenario.Name">
-                      <img src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg"
-                        alt="icon to represent the test result" />
-                      <h5>@scenario.Name</h5>
-                    </a>
-                  </li>
-                }
-              </ul>
-            }
-            @if (feature.Rules.Any())
-            {
-              <ul>
-                @foreach (var rule in feature.Rules)
-                {
-                  <li>
-                    <div class="rule-heading">
-                      <h4>@rule.Name</h4>
-                    </div>
-                    <ul>
-                      @foreach (var scenario in rule.Scenarios)
-                      {
-                        <li>
-                          <a href="@Url.Page("/Features/Index", new { id = feature.Id })#@scenario.Name">
-                            <img src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg"
-                              alt="icon to represent the test result" />
-                            <h5>@scenario.Name</h5>
-                          </a>
-                        </li>
-                      }
-                    </ul>
-                  </li>
-                }
-              </ul>
-            }
-          </div>
-        </li>
-      }
-    </ul>
-  </aside>
-  <div class="resizer" id="resizer"></div>
-  <div class="main">
-    @RenderBody()
-  </div>
-</div>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - VizGurka</title>
+    <link rel="icon" type="image/png" href="~/favgurka.png" />
+    <link rel="stylesheet" href="~/css/sidemenu.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/feature-content.css" asp-append-version="true" />
+</head>
 
-@section Scripts
-{
-  <script src="~/js/scenario-highlighting.js"></script>
-  <script src="~/js/dropdown.js"></script>
-  <script src="~/js/sidebar.js"></script>
-}
+<body>
+    <main>
+        @RenderBody()
+    </main>
+</body>
+
+</html>
