--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -105,6 +105,25 @@
                             alt="status icon" />
                         @Model.SelectedFeature.Name
                     </h1>
+                    <ul class="tag_list">
+                        @foreach (var tag in Model.SelectedFeature.Tags)
+                        {
+                            var sanitizedTag = tag.Length > 1 ? tag.Substring(1) : tag;
+                            var casedTag = char.ToUpper(sanitizedTag[0]) + sanitizedTag.Substring(1);
+                            if (sanitizedTag == "ignore")
+                            {
+                                <li class="tag ignore">@casedTag</li>
+                            }
+                            else if (sanitizedTag == "smoke")
+                            {
+                                <li class="tag smoke">@casedTag</li>
+                            }
+                            else
+                            {
+                                <li class="tag">@casedTag</li>
+                            }
+                        }
+                    </ul>
                     <p class="content_container_duration">Test Duration: @Model.SelectedFeature.TestDuration</p>
                 </div>
                 <h2 class="container_scenarios_title">Scenarios</h2>
@@ -117,6 +136,28 @@
                                 src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg" alt="status icon" />
                             @scenario.Name
                         </h2>
+                        if (scenario.Tags.Any())
+                        {
+                            <ul class="tag_list scenario_tags">
+                                @foreach (var tag in scenario.Tags)
+                                {
+                                    var sanitizedTag = tag.Length > 1 ? tag.Substring(1) : tag;
+                                    var casedTag = char.ToUpper(sanitizedTag[0]) + sanitizedTag.Substring(1);
+                                    if (sanitizedTag == "ignore")
+                                    {
+                                        <li class="tag ignore">@casedTag</li>
+                                    }
+                                    else if (sanitizedTag == "smoke")
+                                    {
+                                        <li class="tag smoke">@casedTag</li>
+                                    }
+                                    else
+                                    {
+                                        <li class="tag">@casedTag</li>
+                                    }
+                                }
+                            </ul>
+                        }
                         <h3 class="container_scenario_duration"><strong>Scenario duration:</strong> @scenario.TestDuration</h3>
                         @foreach (var step in scenario.Steps)
                         {
