--- a/source/VizGurka/wwwroot/css/feature-content.css
+++ b/source/VizGurka/wwwroot/css/feature-content.css
@@ -31,6 +31,47 @@
   padding-top: 20px;
 }
 
+.tag_list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 2vw;
+  margin-bottom: 1rem;
+  list-style: none;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  margin: 0;
+  padding: 10px;
+  width: fit-content;
+  gap: 10px;
+  font-size: 1rem;
+  margin-left: 40px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.tag{
+  padding: 5px;
+  margin: 5px;
+  background-color: #f0f0f0;
+  box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
+  border-radius: 5px;
+  font-weight: 700;
+}
+
+.ignore {
+  background-color: rgba(240, 205, 8);
+  color: rgb(255, 255, 0);
+}
+
+.scenario_tags{
+  margin-left: 0;
+}
+
+.smoke {
+  background-color: gray;
+  color: white;
+}
+
 .content_container_duration{
   font-size: 1.5rem;
   font-weight: 700;
