--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -7,6 +7,7 @@
     Layout = "~/Pages/Shared/_FeaturesLayout.cshtml";
 }
 <script src="~/js/dropdown.js" defer></script>
+<script src="~/js/search.js" defer></script>
 
 @functions {
     public string GetNavLinkClass(string page)
@@ -18,8 +19,11 @@
 
 <nav class="navbar">
     <img class="navbar_img" src="~/biggurka.png" alt="Gurka Logo" />
-    <input class="navbar_search" type="text" id="navbar_search"
-        placeholder="&#x1F50D; @Localizer["Features, Scenarios"]..." />
+    <form id="searchForm" class="navbar_search_form" method="get" onsubmit="return handleSearch(event)">
+        <input type="hidden" id="productName" name="productName" value="@Model.ProductName" />
+        <input class="navbar_search" type="text" id="navbar_search" name="query"
+            placeholder="&#x1F50D; @Localizer["Features, Scenarios"]..." />
+    </form>
     <ul class="navbar_links">
         <li class="navbar_links_link"><a class="@GetNavLinkClass("/features/features")" asp-page="/features/features"
                 asp-route-productName="@Model.ProductName" asp-route-id="@Model.Id">@Localizer["Features"]</a></li>
