--- a/source/VizGurka/Pages/Search/Search.cshtml
+++ b/source/VizGurka/Pages/Search/Search.cshtml
@@ -1,6 +1,7 @@
 @page "/search/{productName}/{query?}"
 @model VizGurka.Pages.Search.SearchModel
 @using Microsoft.Extensions.Localization
+@inject IStringLocalizer<SearchModel> Localizer
 @{
     Layout = "~/Pages/Shared/_SearchLayout.cshtml";
 }
@@ -9,12 +10,13 @@
 
 <section class="navbar">
     <nav>
+        <img class="navbar_img" src="~/biggurka.png" alt="Gurka Logo" />
         <a asp-page="/features/features" asp-route-productName="@Model.ProductName" asp-route-id="@Model.FirstFeatureId"
-            asp-route-featureId="@Model.FirstFeatureId">@Model.home_button</a>
+            asp-route-featureId="@Model.FirstFeatureId">@Localizer["Home"]</a>
         <form id="searchForm" class="navbar_search_form" method="get" onsubmit="return handleSearch(event)">
             <input type="hidden" id="productName" name="productName" value="@Model.ProductName" />
             <input class="navbar_search" type="text" id="navbar_search" name="query"
-                placeholder="&#x1F50D; Features, Scenarios, Rules..." />
+                placeholder="&#x1F50D; @Localizer["Features, Scenarios"]..." />
         </form>
     </nav>
 </section>
@@ -23,16 +25,19 @@
     <section class="search_menu">
         @if (Model.Query == null)
         {
-            <h1 class="search_title">@Model.enter_search</h1>
+            <h1 class="search_title">@Localizer["Enter a search term above"]</h1>
         }
         else
         {
-            <h1 class="search_title">@Model.search_result "@Model.Query"</h1>
-            <a href="#features" class="search_category">Features <span class="count">@Model.FeatureResultCount</span></a>
-            <a href="#scenarios" class="search_category">@Model.scenario_message <span
+            <h1 class="search_title">@Localizer["Search results for:"] "@Model.Query"</h1>
+            <a href="#features" class="search_category">@Localizer["Features"] <span
+                    class="count">@Model.FeatureResultCount</span></a>
+            <a href="#scenarios" class="search_category">@Localizer["Scenarios"] <span
                     class="count">@Model.ScenarioResultCount</span></a>
-            <a href="#rules" class="search_category">@Model.rule_message <span
+            <a href="#rules" class="search_category">@Localizer["Rules"] <span
                     class="count">@Model.RuleResultCount</span></a>
+            <a href="#tags" class="search_category">@Localizer["Tags"]
+                <span class="count">@Model.TagsResultCount</span></a>
         }
     </section>
     <section class="search_display">
@@ -40,7 +45,8 @@
         {
             <div class="dropdown">
                 <div class="dropdown-header arrow-trigger">
-                    <h1 id="features" class="search_category">Features <span class="count">@Model.FeatureResultCount</span>
+                    <h1 id="features" class="search_category">@Localizer["Egenskaper"] <span
+                            class="count">@Model.FeatureResultCount</span>
                     </h1>
                     <span class="arrow right"></span>
                 </div>
@@ -61,7 +67,7 @@
             </div>
             <div class="dropdown">
                 <div class="dropdown-header arrow-trigger">
-                    <h1 id="scenarios" class="search_category">@Model.scenario_message <span
+                    <h1 id="scenarios" class="search_category">@Localizer["Scenarios"] <span
                             class="count">@Model.ScenarioResultCount</span></h1>
                     <span class="arrow right"></span>
                 </div>
@@ -91,7 +97,7 @@
             </div>
             <div class="dropdown">
                 <div class="dropdown-header arrow-trigger">
-                    <h1 id="rules" class="search_category">@Model.rule_message <span
+                    <h1 id="rules" class="search_category">@Localizer["Rules"] <span
                             class="count">@Model.RuleResultCount</span></h1>
                     <span class="arrow right"></span>
                 </div>
@@ -113,6 +119,7 @@
                     </ul>
                 </div>
             </div>
+
         }
         else
         {
