--- a/source/VizGurka/wwwroot/css/search.css
+++ b/source/VizGurka/wwwroot/css/search.css
@@ -55,6 +55,10 @@
     padding: 0;
 }
 
+.navbar_img{
+  width: 60px;
+}
+
 .navbar_search{
     height: 1em;
     width: 80vw;
@@ -70,6 +74,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .navbar nav a{
