Update properties to use nullable types and improve null handling

--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -200,7 +200,7 @@
                                 </ul>
                             }
                             <div class="scenario_rule_description" id="scenario_rule_description">
-                                @Model.MarkdownStringToHtml(rule.Description)</div>
+                                @Model.MarkdownStringToHtml(rule.Description ?? string.Empty)</div>
                         </div>
                         <ul class="scenario_list">
                             @foreach (var scenario in rule.Scenarios)
